@@ -4,5 +4,8 @@ SUBDIRS=gconf
 SchemasDTD_DATA = gconf-1.0.dtd
 SchemasDTDdir = $(datadir)/sgml/gconf
 
+man_MANS = gconftool-2.1
+
 EXTRA_DIST = \
-	$(SchemasDTD_DATA)
+	$(SchemasDTD_DATA) \
+	$(man_MANS)
