@@ -1,3 +1,9 @@
+2003-10-09  Ross Burton  <ross@burtonini.com>
+
+	* doc/Makefile.am:
+	* doc/gconftool-2.1:
+	Added a basic man page.
+
 2003-10-07  Žygimantas Beručka  <uid0@tuxfamily.org>
 
 	* configure.in: Added "lt" to ALL_LINGUAS
